[tool.poetry]
name = "mlens-proto"
version = "1.1.0"
description = "MLens Protobuf Definitions"
authors = ["melikbugra <melik@melikbugraozcelik.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://mlens.melikbugraozcelik.com"

[tool.poetry.urls]
Author = "https://melikbugraozcelik.com"

[tool.poetry.dependencies]
python = ">=3.11"
protobuf = "^3.20"
mypy-protobuf = "^3.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
